made it responsive

--- a/index.html
+++ b/index.html
@@ -24,15 +24,12 @@
         <div class="first"><h2>Open</h2></div>
         <div class="second"><h2>Mail</h2></div>
       </div>
-    <div class="subtitle">
-      <p>Opening Up for your Needs!</p>
-    </div>
   </header>
 
   <main>
     <section class="philosophy">
       <div class="content1">
-        <h2>Philosophy</h2>
+        <h2 class="phil">Philosophy</h2>
       <p>Everyone needs a friend!</p>
       <p>No matter where you are, who you are, or what you are, you can receive mail!</p>
       </div>
