media query change and grid change for gallery

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
   <title>Open Mail</title>
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Montserrat&display=swap" rel="stylesheet">
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="/css/styles.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css">
 </head>
 <body>
@@ -21,8 +21,8 @@
         </ul>
       </nav>
       <div class="opening">
-        <div class="first"><h2>Open</h2></div>
-        <div class="second"><h2>Mail</h2></div>
+        <div class="first"><h1>Open</h1></div>
+        <div class="second"><h1>Mail</h1></div>
       </div>
   </header>
 
@@ -30,8 +30,7 @@
     <section class="philosophy">
       <div class="content1">
         <h2 class="phil">Philosophy</h2>
-      <p>Everyone needs a friend!</p>
-      <p>No matter where you are, who you are, or what you are, you can receive mail!</p>
+      <p>Everyone needs a friend! No matter where you are, who you are, or what you are, you can receive mail!</p>
       </div>
     </section>
 
