add readme file

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
   <main>
     <section class="philosophy">
       <div class="content1">
-        <h2 class="phil">Philosophy</h2>
+        <h2>Philosophy</h2>
       <p>Everyone needs a friend! No matter where you are, who you are, or what you are, you can receive mail!</p>
       </div>
     </section>
@@ -125,14 +125,14 @@
     </section>
 </main>
 
-  <footer>&#169; Karen Sule 2021
-    <div>
-      <ul class=socials>
+  <footer>
+    <ul class=socials>
       <li><a href="https://twitter.com/jensimmons?s=20" target="blank"><i class="fab fa-twitter"></i></a></li>
       <li><a href="https://www.instagram.com/kiyothelab/" target="blank"><i class="fab fa-instagram"></i></a></li>
       <li><a href="https://jensimmons.com/" target="blank"><i class="fab fa-snapchat-ghost"></i></a></li>
     </ul>
-  </div>
+    &#169; Karen Sule 2021
 </footer>
+
 </body>
 </html>
